--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -42,7 +42,7 @@
 			justify-content: flex-end;
 			position:fixed;
 				top: 0;
-				right: 0;
+				left: 0;
 			transform: translate(0, -150%);
 			transition: transform 0.3s ease;
 			z-index: 5;
@@ -56,6 +56,7 @@
 
 		.texts {
 			padding-right: 30px;
+			flex-basis: 60%;
 		}
 		
 		.permalinks {
@@ -79,7 +80,8 @@
 
 			display: flex;
 			justify-content: flex-end;
-			flex: 0 0 405px;
+			flex-basis: 40%;
+			// flex: 0 0 405px;
 
 			[class^=button] + [class^=button] {
 				margin-left: 10px;
