--- a/src/scss/components/_react-datepicker.scss
+++ b/src/scss/components/_react-datepicker.scss
@@ -71,13 +71,32 @@
 
 .react-datepicker {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   background-color: #fff;
   color: #000;
   border: 1px solid #aeaeae;
   border-radius: 0.3rem;
   display: inline-block;
   position: relative;
+  li {
+	font-size: 0.8rem;
+  }
+}
+
+.react-datepicker--time-only .react-datepicker__triangle {
+  left: 35px;
+}
+
+.react-datepicker--time-only .react-datepicker__time-container {
+  border-left: 0;
+}
+
+.react-datepicker--time-only .react-datepicker__time {
+  border-radius: 0.3rem;
+}
+
+.react-datepicker--time-only .react-datepicker__time-box {
+  border-radius: 0.3rem;
 }
 
 .react-datepicker__triangle {
@@ -142,7 +161,8 @@
 }
 
 .react-datepicker__current-month,
-.react-datepicker-time__header {
+.react-datepicker-time__header,
+.react-datepicker-year-header {
   margin-top: 0;
   color: #000;
   font-weight: bold;
@@ -166,6 +186,10 @@
   padding: 0;
   border: 0.45rem solid transparent;
   z-index: 1;
+  height: 10px;
+  width: 10px;
+  text-indent: -999em;
+  overflow: hidden;
 }
 
 .react-datepicker__navigation--previous {
@@ -235,6 +259,51 @@
   text-align: center;
 }
 
+.react-datepicker__month .react-datepicker__month-text {
+  display: inline-block;
+  width: 4rem;
+}
+
+.react-datepicker__input-time-container {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin: 5px 0 10px 15px;
+  text-align: left;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__caption {
+  display: inline-block;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container {
+  display: inline-block;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__input {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__input input {
+  width: 85px;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__input input[type="time"]::-webkit-inner-spin-button,
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__input input[type="time"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__input input[type="time"] {
+  -moz-appearance: textfield;
+}
+
+.react-datepicker__input-time-container .react-datepicker-time__input-container .react-datepicker-time__delimiter {
+  margin-left: 5px;
+  display: inline-block;
+}
+
 .react-datepicker__time-container {
   float: right;
   border-left: 1px solid #aeaeae;
@@ -267,12 +336,14 @@
   margin: 0;
   height: calc(195px + (1.7rem / 2));
   overflow-y: scroll;
-  padding-right: 30px;
+  padding-right: 0px;
+  padding-left: 0px;
   width: 100%;
   box-sizing: content-box;
 }
 
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item {
+  height: 30px;
   padding: 5px 10px;
 }
 
@@ -334,72 +405,91 @@
   margin: 0.166rem;
 }
 
-.react-datepicker__day {
+.react-datepicker__day,
+.react-datepicker__month-text {
   cursor: pointer;
 }
 
-.react-datepicker__day:hover {
+.react-datepicker__day:hover,
+.react-datepicker__month-text:hover {
   border-radius: 0.3rem;
   background-color: #f0f0f0;
 }
 
-.react-datepicker__day--today {
+.react-datepicker__day--today,
+.react-datepicker__month-text--today {
   font-weight: bold;
 }
 
-.react-datepicker__day--highlighted {
+.react-datepicker__day--highlighted,
+.react-datepicker__month-text--highlighted {
   border-radius: 0.3rem;
   background-color: #3dcc4a;
   color: #fff;
 }
 
-.react-datepicker__day--highlighted:hover {
+.react-datepicker__day--highlighted:hover,
+.react-datepicker__month-text--highlighted:hover {
   background-color: #32be3f;
 }
 
-.react-datepicker__day--highlighted-custom-1 {
+.react-datepicker__day--highlighted-custom-1,
+.react-datepicker__month-text--highlighted-custom-1 {
   color: magenta;
 }
 
-.react-datepicker__day--highlighted-custom-2 {
+.react-datepicker__day--highlighted-custom-2,
+.react-datepicker__month-text--highlighted-custom-2 {
   color: green;
 }
 
-.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range {
+.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range {
   border-radius: 0.3rem;
   background-color: #216ba5;
   color: #fff;
 }
 
-.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover {
+.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover,
+.react-datepicker__month-text--selected:hover,
+.react-datepicker__month-text--in-selecting-range:hover,
+.react-datepicker__month-text--in-range:hover {
   background-color: #1d5d90;
 }
 
-.react-datepicker__day--keyboard-selected {
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected {
   border-radius: 0.3rem;
   background-color: #2a87d0;
   color: #fff;
 }
 
-.react-datepicker__day--keyboard-selected:hover {
+.react-datepicker__day--keyboard-selected:hover,
+.react-datepicker__month-text--keyboard-selected:hover {
   background-color: #1d5d90;
 }
 
-.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range) {
+.react-datepicker__day--in-selecting-range ,
+.react-datepicker__month-text--in-selecting-range {
   background-color: rgba(33, 107, 165, 0.5);
 }
 
-.react-datepicker__month--selecting-range .react-datepicker__day--in-range:not(.react-datepicker__day--in-selecting-range) {
+.react-datepicker__month--selecting-range .react-datepicker__day--in-range , .react-datepicker__month--selecting-range
+.react-datepicker__month-text--in-range {
   background-color: #f0f0f0;
   color: #000;
 }
 
-.react-datepicker__day--disabled {
+.react-datepicker__day--disabled,
+.react-datepicker__month-text--disabled {
   cursor: default;
   color: #ccc;
 }
 
-.react-datepicker__day--disabled:hover {
+.react-datepicker__day--disabled:hover,
+.react-datepicker__month-text--disabled:hover {
   background-color: transparent;
 }
 
@@ -525,11 +615,14 @@
   background-color: transparent;
   border: 0;
   cursor: pointer;
-  display: inline-block;
-  height: 0;
   outline: 0;
   padding: 0;
   vertical-align: middle;
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  top: 25%;
+  right: 7px;
 }
 
 .react-datepicker__close-icon::after {
@@ -547,9 +640,8 @@
   margin: -8px auto 0;
   padding: 2px;
   position: absolute;
-  right: 7px;
+  right: 0px;
   text-align: center;
-  top: 50%;
 }
 
 .react-datepicker__today-button {
