--- a/src/scss/components/_autosuggest.scss
+++ b/src/scss/components/_autosuggest.scss
@@ -28,6 +28,12 @@
 		overflow:auto;
 	}
 
+	.react-autosuggest__suggestion--highlighted {
+		background: $color-accent-primary;
+		color: #fff;
+
+	}
+
 }
 
 .react-autosuggest__suggestions-container {
