wip styled components

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -162,10 +162,10 @@
 	background:rgba(149, 197, 154, 0.5);
 }
 
-.single-record {
-	position: relative;
-	padding-top: 40px;
-	padding-bottom: 1px;
+// .single-record {
+// 	position: relative;
+// 	padding-top: 40px;
+// 	padding-bottom: 1px;
 
 	h2.field-group-title {
 		font-weight: $font-weight-semibold;
@@ -234,7 +234,7 @@
 			}
 		}
 	}
-}
+// }
 
 .checkbox-container {
 	text-align: left;
