--- a/src/scss/components/_process-record.scss
+++ b/src/scss/components/_process-record.scss
@@ -20,8 +20,8 @@
 	}
 
 	.back-btn {
-		@extend %base_button;
-		@extend %round_button;
+		// @extend %base_button;
+		// @extend %round_button;
 	}
 
 }
