--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -46,7 +46,7 @@
 	color: rgb(255, 241, 215);
 	text-shadow: #FC0 1px 0 10px;
 	font-weight: bold;
-	@extend %round_button;
+	// @extend %round_button;
 	@extend %text_default;
 	border-radius: 4px;
 	margin: 0 10px;
