--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -3,17 +3,17 @@
 	position: relative;
 
 
-	> .single-record {
-		width: 1500 / 1655 * 100%;
-		margin-left: auto;
-		margin-right: auto;
-	}
+	// > .single-record {
+	// 	width: 1500 / 1655 * 100%;
+	// 	margin-left: auto;
+	// 	margin-right: auto;
+	// }
 
-	@include at-most($screen-md-max) {
-		> .single-record {
-			width: 90%;
-		}
-	}
+	// @include at-most($screen-md-max) {
+	// 	> .single-record {
+	// 		width: 90%;
+	// 	}
+	// }
 }
 
 .mtm-group {
