--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,25 +18,25 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "utils/_easing";
 @import "base/_texts";
 
-@import "components/buttons";
+// @import "components/buttons";
 @import "components/form";
 @import "components/navbar";
 @import "components/header";
 @import "components/loaded-records";
 @import "components/root-form";
 @import "components/subform";
-@import "components/home-button";
+// @import "components/home-button";
 @import "components/list-records";
-@import "components/bank";
+// @import "components/bank";
 @import "components/url-modal";
 @import "components/_react-datepicker";
 @import "components/_login";
 @import "components/_autosuggest";
 @import "components/_process-record";
 @import "components/_dashboard";
-@import "components/_list-search";
+// @import "components/_list-search";
 @import "components/_hotspot";
-@import "components/_field-deps";
+// @import "components/_field-deps";
 
 @import "layout/_default";
 
@@ -52,41 +52,3 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 	color:$color-warn-primary;
 }
 
-//autocomplete, voir https://github.com/moroshko/react-autosuggest#themeProp pour le schema
-.react-autosuggest__container{
-	position:relative;
-}
-
-.react-autosuggest__container--open{
-
-}
-
-.react-autosuggest__input{
-
-}
-
-ul.react-autosuggest__suggestions-container{
-	list-style-type:none;
-	margin:0;
-	padding:0;
-	position:absolute;
-	top: 40px;
-	background:white;
-	border:1px $gray86 solid;
-	z-index:1000;
-}
-
-li.react-autosuggest__suggestion{
-	cursor:pointer;
-	border-bottom: 1px $gray86 solid;
-	padding:4px 10px;
-	//pour que l'option vide ait la meme hauteur que les autres
-	&:before{
-		content:"-";
-		color:transparent;
-	}
-}
-
-li.react-autosuggest__suggestion--focused{
-	background: $teal62;
-}
