--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -38,16 +38,16 @@
 }
 
 
-.prod-warning-label {
-	background: rgb(172, 55, 55);
-	height: 100%;
-	line-height: 30px;
-	padding: 0 50px;
-	color: rgb(255, 241, 215);
-	text-shadow: #FC0 1px 0 10px;
-	font-weight: bold;
-	// @extend %round_button;
-	@extend %text_default;
-	border-radius: 4px;
-	margin: 0 10px;
-}
+// .prod-warning-label {
+// 	background: rgb(172, 55, 55);
+// 	height: 100%;
+// 	line-height: 30px;
+// 	padding: 0 50px;
+// 	color: rgb(255, 241, 215);
+// 	text-shadow: #FC0 1px 0 10px;
+// 	font-weight: bold;
+// 	// @extend %round_button;
+// 	@extend %text_default;
+// 	border-radius: 4px;
+// 	margin: 0 10px;
+// }
