--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,19 +19,19 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "base/_texts";
 
 // @import "components/buttons";
-@import "components/form";
+// @import "components/form";
 @import "components/navbar";
 @import "components/header";
 @import "components/loaded-records";
 @import "components/root-form";
-@import "components/subform";
+// @import "components/subform";
 // @import "components/home-button";
 @import "components/list-records";
 // @import "components/bank";
 @import "components/url-modal";
 @import "components/_react-datepicker";
-@import "components/_login";
-@import "components/_autosuggest";
+// @import "components/_login";
+// @import "components/_autosuggest";
 @import "components/_process-record";
 @import "components/_dashboard";
 // @import "components/_list-search";
